# AndroidCameraXNDKOpenCV

./: README.md
OpenCV45Test/: settings.gradle
OpenCV45Test/app/: build.gradle
OpenCV45Test/app/src/androidTest/java/lib/vaccae/opencv/: ExampleInstrumentedTest.kt
OpenCV45Test/app/src/main/: AndroidManifest.xml
OpenCV45Test/app/src/main/cpp/: CMakeLists.txt  facedetect.cpp  facedetect.h  opencv-lib.cpp
OpenCV45Test/app/src/main/cpp/opencv2/: features2d.hpp  objdetect.hpp
OpenCV45Test/app/src/main/java/lib/vaccae/opencv/: AnalysisCvDetector.kt  ImageUtils.kt  MainActivity.kt  OpenCVJNI.kt  QrCode.kt  ViewOverLay.kt
OpenCV45Test/app/src/main/res/layout/: activity_main.xml
OpenCV45Test/app/src/main/res/values/: strings.xml  themes.xml
OpenCV45Test/app/src/main/res/values-night/: themes.xml
OpenCV45Test/app/src/test/java/lib/vaccae/opencv/: ExampleUnitTest.kt
OpenCV45Test/gradle/wrapper/: gradle-wrapper.properties
